--- a/src/App.css
+++ b/src/App.css
@@ -26,8 +26,8 @@
 }
 .link:hover, .logout:hover, a:hover {
     background-color:#0099cc;
-    color: white;
-    border-radius: 5px;
+    color: rgb(255, 255, 255);
+    border-radius: 2px;
     cursor: pointer;
   }
   
@@ -42,7 +42,7 @@
     padding: 10px 20px;
     text-align: center;
     display: inline-block;
-    font-size: 16px;
+    font-size: 18px;
     cursor: pointer;
     width: 300px;
     border-right-color: white;
@@ -63,7 +63,7 @@
     color: white;
     text-align: center;
     display: inline-block;
-    font-size: 16px;
+    font-size: 18px;
     cursor: pointer;
     width: 100px;
     margin-left: 20px;
@@ -210,7 +210,7 @@
  .pointsScore{
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
-  border-radius: 50%;
+  border-radius: 40%;
   background: #0099cc;
   font-size: x-large;
  }
@@ -225,12 +225,17 @@
  }
  .divNQ{
   border-style: groove;
-  height: 320px;
+  height: 350px;
   width: 385px;
+  border-color: #0099cc;
+  border-width: 4px;
  }
  #op1, #op2{
    width:360px;
-   border-radius: 25px;
+   height: 30px;
+   border-radius: 8px;
+   border-color: #0099cc;
+   border-width: 4px;
  }
  .pNQ{
   border-bottom-style: solid;
